# DWave-Quantum-Annealing

./: README.md  binary_linear_least_square.py  environment.yml  environment_dev.yml  pyproject.toml  requirements.txt  requirements_dev.txt
dwaveutils/: bl_lstsq.py
examples/: Laplace_equation_1D.ipynb  Laplace_equation_1D.py  Laplace_equation_2D.ipynb  Laplace_equation_2D.py  Poisson_equation_1D.ipynb  Poisson_equation_1D.py  inverse_problem.ipynb  inverse_problem.py  inverse_problem_ERI2D.ipynb  inverse_problem_ERI2D.py  inverse_problem_matvec.ipynb  inverse_problem_matvec.py  inverse_problem_poisson1D.ipynb  inverse_problem_poisson1D.py  linear_system.ipynb  linear_system.py
simpeg_ecosys/: __init__.py
simpeg_ecosys/mathematical/: __init__.py  poisson.py
simpeg_ecosys/utils/: __init__.py  boundary_utils.py  generic_utils.py
tests/: conftest.py  test_bl_lstsq.py
