[tool.poetry]
name = "dwave-quantum-annealing"
version = "0.1.0"
description = ""
authors = ["Zheng-Kai Ye <supon3060@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.5"
matplotlib = "^3.3.3"
dwaveutils = { git = "https://github.com/yezhengkai/dwaveutils", rev = "0fcbadcf86263c4629eb9f90a389db3881d28033" }
simpeg-ecosys = { git = "https://github.com/yezhengkai/simpeg_ecosys", rev = "c1264916787cfe151e92625c1ac8e20edace4d07" }
pandas = "^1.2.1"
scikit-learn = "^0.24"
SimPEG = "0.15.0"
pymatsolver = "0.1.3"
geoana = "0.1.1"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.6.0"
autopep8 = "^1.5.4"
jedi = "^0.17.2"
pywin32 = "303"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
